# brainglobe-napari-io

./: .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: config.yml
brainglobe_napari_io/: __init__.py  napari.yaml  plugins.py  utils.py
brainglobe_napari_io/brainmapper/: brainmapper_reader_dir.py
brainglobe_napari_io/brainreg/: reader_dir.py  reader_dir_atlas_space.py  reader_dir_sample_space.py  reader_dir_standard_space.py  reader_sample_resolution.py  reader_standard_space.py  utils.py
brainglobe_napari_io/cellfinder/: reader_dir.py  reader_points.py  reader_xml.py  utils.py  writer_multiple_xml.py  writer_points.py  writer_xml.py
brainglobe_napari_io/tests/: test_cellfinder_reader.py  test_cellfinder_writer.py
brainglobe_napari_io/workflows/: wholebrain_cell_reader_dir.py
tests/: test_cellfinder_reader.py  test_cellfinder_writer.py
tests/data/: cell_classification.xml
tests/data/brainmapper_output/: brainmapper.json
tests/data/brainmapper_output/points/: cell_classification.xml
tests/data/brainreg_output/: brainreg.json
tests/data/wholebrain_cell_output/: cellfinder.json
tests/data/wholebrain_cell_output/registration/: brainreg.json
tests/data/xml/: incorrect_tag.xml
tests/data/yml/: cell_classification.yml
tests/tests/test_integration/: test_brainmapper_reader.py  test_brainreg_reader.py  test_brainreg_reader_atlas_space.py  test_brainreg_reader_sample_space.py  test_cellfinder_reader.py  test_cellfinder_writer.py  test_wholebrain_cell_reader.py
tests/tests/test_unit/: test_brainreg_utils.py  test_cellfinder_utils.py
