[project]
name = "brainglobe-napari-io"
authors = [{ name = "Adam Tyson", email = "hello@brainglobe.info" }]
description = "Read and write files from the BrainGlobe computational neuroanatomy suite into napari"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "brainglobe-atlasapi >=2.0.1",
    "brainglobe-space >=1.0.0",
    "brainglobe-utils >=0.4.2",
    "napari>=0.6.1",
    "tifffile>=2020.8.13",
    "numpy",
    "pandas",
]

[project.urls]
Homepage = "https://brainglobe.info"
"Source Code" = "https://github.com/brainglobe/brainglobe-napari-io"
"Bug Tracker" = "https://github.com/brainglobe/brainglobe-napari-io/issues"
Documentation = "https://docs.brainglobe.info"
"User Support" = "https://forum.image.sc/tag/brainglobe"
Twitter = "https://twitter.com/brain_globe"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-qt",
    "coverage",
    "tox",
    "black",
    "mypy",
    "pre-commit",
    "ruff",
    "setuptools_scm",
    "pyqt5"
]


[project.entry-points."napari.manifest"]
brainglobe-napari-io = "brainglobe_napari_io:napari.yaml"


[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_napari_io*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=brainglobe_napari_io"

[tool.black]
target-version = ['py311','py312', 'py313']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
    ".yaml",
    "tox.ini",
    "tests/",
    "tests/test_unit/",
    "tests/test_integration/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}, napari-dev
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_napari_io --cov-report=xml
passenv =
    CI
    GITHUB_ACTIONS
    DISPLAY
    XAUTHORITY
    NUMPY_EXPERIMENTAL_ARRAY_FUNCTION
    PYVISTA_OFF_SCREEN
deps =
    napari-dev: git+https://github.com/napari/napari
"""
